; ModuleID = '/home/carl/AnghaBench/freebsd/sys/fs/fdescfs/extr_fdesc_vnops.c_fdesc_open.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/fs/fdescfs/extr_fdesc_vnops.c_fdesc_open.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.vop_open_args = type { %struct.TYPE_3__*, %struct.vnode* }
%struct.TYPE_3__ = type { i32 }
%struct.vnode = type { i32 }
%struct.TYPE_4__ = type { i64, i32 }

@Froot = common dso_local global i64 0, align 8
@ENODEV = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.vop_open_args*)* @fdesc_open to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @fdesc_open(%struct.vop_open_args* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.vop_open_args*, align 8
  %4 = alloca %struct.vnode*, align 8
  store %struct.vop_open_args* %0, %struct.vop_open_args** %3, align 8
  %5 = load %struct.vop_open_args*, %struct.vop_open_args** %3, align 8
  %6 = getelementptr inbounds %struct.vop_open_args, %struct.vop_open_args* %5, i32 0, i32 1
  %7 = load %struct.vnode*, %struct.vnode** %6, align 8
  store %struct.vnode* %7, %struct.vnode** %4, align 8
  %8 = load %struct.vnode*, %struct.vnode** %4, align 8
  %9 = call %struct.TYPE_4__* @VTOFDESC(%struct.vnode* %8)
  %10 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %9, i32 0, i32 0
  %11 = load i64, i64* %10, align 8
  %12 = load i64, i64* @Froot, align 8
  %13 = icmp eq i64 %11, %12
  br i1 %13, label %14, label %15

14:                                               ; preds = %1
  store i32 0, i32* %2, align 4
  br label %25

15:                                               ; preds = %1
  %16 = load %struct.vnode*, %struct.vnode** %4, align 8
  %17 = call %struct.TYPE_4__* @VTOFDESC(%struct.vnode* %16)
  %18 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %17, i32 0, i32 1
  %19 = load i32, i32* %18, align 8
  %20 = load %struct.vop_open_args*, %struct.vop_open_args** %3, align 8
  %21 = getelementptr inbounds %struct.vop_open_args, %struct.vop_open_args* %20, i32 0, i32 0
  %22 = load %struct.TYPE_3__*, %struct.TYPE_3__** %21, align 8
  %23 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %22, i32 0, i32 0
  store i32 %19, i32* %23, align 4
  %24 = load i32, i32* @ENODEV, align 4
  store i32 %24, i32* %2, align 4
  br label %25

25:                                               ; preds = %15, %14
  %26 = load i32, i32* %2, align 4
  ret i32 %26
}

declare dso_local %struct.TYPE_4__* @VTOFDESC(%struct.vnode*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
